--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,6 +5,14 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+  <filter>
+  	<filter-name>HiddenHttpMethodFilter</filter-name>
+  	<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>HiddenHttpMethodFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<servlet>
@@ -15,6 +23,7 @@
 	<!-- Map all requests to the DispatcherServlet for handling -->
 	<servlet-mapping>
 		<servlet-name>springMVC</servlet-name>
+		<!-- 此处的/ 代表核心控制器只处理请求，不会处理静态页面，自动过滤页面的访问 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
   
