--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,6 +18,19 @@
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- 设置springMVC配置文件的位置以及名称 -->
+		<init-param>
+			<!-- 固定值 上下文配置路径 对应DispatcherServlet的属性名  -->
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:springMVC.xml</param-value>
+		</init-param>
+		<!-- 
+			用来设置servlet的加载时间
+			默认在第一次访问时加载，若设置此标签，会将servlet的加载时间提前到项目启动时
+			此标签中可以写整数，但是写负整数和0和没有设置是一样的效果，只有设置为正整数时才会将servlet的加载时间提前到项目启动时
+			值越小优先级越高
+		 -->
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<!-- Map all requests to the DispatcherServlet for handling -->
@@ -26,5 +39,6 @@
 		<!-- 此处的/ 代表核心控制器只处理请求，不会处理静态页面，自动过滤页面的访问 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
   
 </web-app>
