--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,6 +5,26 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- 编码过滤器一定要放到所有过滤器的最前面 -->
+  <filter>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<!-- 为CharacterEncodingFilter中的encoding属性赋值 -->
+  		<param-name>encoding</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<!-- /* 对所有的请求进行过滤 -->
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- 
+  	Spring自带了一个过滤器HiddenHttpMethodFilter，支持GET、POST、PUT、DELETE请求
+  	method必须是POST，然后设置隐藏域name值为_method value值（DELETE|PUT）
+   -->
   <filter>
   	<filter-name>HiddenHttpMethodFilter</filter-name>
   	<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -36,7 +56,7 @@
 	<!-- Map all requests to the DispatcherServlet for handling -->
 	<servlet-mapping>
 		<servlet-name>springMVC</servlet-name>
-		<!-- 此处的/ 代表核心控制器只处理请求，不会处理静态页面，自动过滤页面的访问 -->
+		<!-- 此处的/ 代表核心控制器只处理请求，不会处理静态页面，自动过滤页面的访问即访问jsp页面 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
