--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,6 +28,7 @@
     <servlet-name>springMVC</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
+    	<!-- 修改文件的路径，contextConfigLocation为固定值 -->
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:springMVC.xml</param-value>
     </init-param>
@@ -37,7 +38,18 @@
     <servlet-name>springMVC</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <listener>
+  
+  <!-- <listener>
     <listener-class>com.hr.listener.SpringListener</listener-class>
+  </listener> -->
+  
+  <listener>
+  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <!-- 项目启动时 要加载context-param -->
+  <context-param>
+  	<param-name>contextConfigLocation</param-name>
+  	<!-- 找类路径下的spring.xml -->
+  	<param-value>classpath:spring.xml</param-value>
+  </context-param>
 </web-app>
